--- a/css/custom.css
+++ b/css/custom.css
@@ -1,6 +1,6 @@
 :root {
     --background-1: #fff;
-    --background-2: #D4F1F4;
+    --background-2: #e8fafc;
     --black-color-0: #000;
     --black-color-2: #222;
     --black-color-3: #333;
